tests/ui/type-alias/recursive-lazy-type-alias-ice-152633.stderr
error[E0275]: overflow normalizing the type alias `Arr2`
  --> $DIR/recursive-lazy-type-alias-ice-152633.rs:12:1
   |
LL | type Arr2 = [usize; <Arr2 as Trait>::ASSOC];
   | ^^^^^^^^^
   |
   = note: in case this is a recursive type alias, consider using a struct, enum, or union instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
